tests/machine/x/c/dataset_sort_take_limit.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  const char *name;
  int price;
} product_t;
typedef struct {
  int len;
  product_t *data;
} product_list_t;
product_list_t create_product_list(int len) {
  product_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(product_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  product_t products[] = {(product_t){.name = "Laptop", .price = 1500},
                          (product_t){.name = "Smartphone", .price = 900},
                          (product_t){.name = "Tablet", .price = 600},
                          (product_t){.name = "Monitor", .price = 300},
                          (product_t){.name = "Keyboard", .price = 100},
                          (product_t){.name = "Mouse", .price = 50},
                          (product_t){.name = "Headphones", .price = 200}};
  int products_len = sizeof(products) / sizeof(products[0]);
  product_list_t tmp1 = product_list_t_create(products_len);
  int *tmp4 = (int *)malloc(sizeof(int) * products_len);
  int tmp2 = 0;
  int tmp5 = 1;
  int tmp6 = 3;
  int tmp7 = 0;
  for (int tmp3 = 0; tmp3 < products_len; tmp3++) {
    product_t p = products[tmp3];
    if (tmp7 < tmp5) {
      tmp7++;
      continue;
    }
    if (tmp6 >= 0 && tmp2 >= tmp6) {
      break;
    }
    tmp7++;
    tmp1.data[tmp2] = p;
    tmp4[tmp2] = (-p.price);
    tmp2++;
  }
  tmp1.len = tmp2;
  for (int i10 = 0; i10 < tmp2 - 1; i10++) {
    for (int i11 = i10 + 1; i11 < tmp2; i11++) {
      if (tmp4[i10] > tmp4[i11]) {
        int tmp8 = tmp4[i10];
        tmp4[i10] = tmp4[i11];
        tmp4[i11] = tmp8;
        product_t tmp9 = tmp1.data[i10];
        tmp1.data[i10] = tmp1.data[i11];
        tmp1.data[i11] = tmp9;
      }
    }
  }
  product_list_t expensive = tmp1;
  printf("--- Top products (excluding most expensive) ---\n");
  for (int tmp12 = 0; tmp12 < expensive.len; tmp12++) {
    product_t item = expensive.data[tmp12];
    printf("%s costs $ %d\n", item.name, item.price);
  }
  free(expensive.data);
  return 0;
}
int main() { return _mochi_main(); }
